change favicon, fix layout problem in IE.

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,25 @@
+/**
+ * for IE and For larger screen 
+ */
+#header {
+    position: fixed;
+    width: 23%;
+    min-height: 100%;
+    min-width: 240px;
+    padding-left: 2%;
+}
+
+#main {
+    margin-left: 23%;
+    min-width: 658px;
+    position: relative;
+    border-left: 1px solid #E3E3E3;
+    min-height: 900px;
+}
+#footer {
+    position: fixed;
+    bottom: 10px;
+}
 
 /*
  * For smaller screen 
@@ -27,6 +49,10 @@
         display: inline;
     }
     #main {
+        margin-left: 0;
+        min-width: 0;
+        min-height: 0;
+        border-left: none;
         margin-top: 30px;
         padding-left: 20px;
         padding-right: 15px;
@@ -42,31 +68,5 @@
     }
     #footer {
         text-align: center;
-    }
-}
-
-
-/*
- * For larger screen 
- */
-@media all and (min-width: 630px) {
-    #header {
-        position: fixed;
-        width: 23%;
-        min-height: 100%;
-        min-width: 240px;
-        padding-left: 2%;
-    }
-    
-    #main {
-        margin-left: 23%;
-        min-width: 658px;
-        position: relative;
-        border-left: 1px solid #E3E3E3;
-        min-height: 900px;
-    }
-    #footer {
-        position: fixed;
-        bottom: 10px;
     }
 }
